<resources>
    <string name="app_name">LiQunALiFacePay</string>
    <!-- 日结 -->
    <string name="title_day_end">日结</string>
    <string name="day_end_explain">当日营业结束，自助前端需要做日结处理</string>
    <string name="input_pwd">输入密码</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="pwd_not_null">密码不可为空！</string>
    <string name="pwd_err">密码有误，请重新输入！</string>
    <string name="connect_server_fail">连接服务器失败 , 请联系管理员. . .</string>
    <string name="connect_client_fail">读取服务器失败 , 请联系管理员 . . .</string>
    <string name="result_null_err">日结无果,请重新操作！</string>
    <string name="day_end_success">日结完成！</string>
    <!-- 设置 -->
    <string name="title_setting">设置</string>
    <string name="title_self_gathering_ip">自助收银IP地址</string>
    <string name="title_self_gathering_port">自助收银IP端口</string>
    <string name="title_shop_name">门店名称</string>
    <string name="title_shop_no">门店编号</string>
    <string name="title_shop_merchant_no">门店商户号</string>
    <string name="title_catwalk_no">款台号</string>
    <string name="title_pos_server_ip">Pos后台IP地址</string>
    <string name="title_pos_server_port">Pos后台IP端口</string>
    <string name="title_use_shopping_bag">启用购物袋</string>
    <string name="content_no_use_shopping_bag">未启用购物袋</string>
    <string name="title_debug_pattern">调试模式</string>
    <string name="content_debug_closed">调试模式已关闭</string>
    <string name="please_input">请输入 . . .</string>
    <string name="content_null_err">内容不能为空！</string>
    <string name="loading_day_end">日结中 . . .</string>
    <string name="empty" />
    <string name="title_notice">注意！</string>
    <string name="hint_content_null_err">内容不可为空！</string>
    <string name="input_bar_code">手输条码</string>
    <string name="title_self_help_pay">自助收银</string>
    <string name="pay">去付款</string>
    <string name="cancel_deal">取消交易</string>
    <string name="select_pay_type">选择支付方式</string>
    <string name="bar_code_not_null">商品码不可为空！</string>
    <string name="bar_code_digit_err">商品码位数有误，请重新输入！</string>
    <string name="hint_goods_number_err">您没有选择任何商品！</string>
    <string name="cancel_pay">取消支付</string>
    <string name="hint_please_open_pay_code">请打开支付宝[付款码]</string>
    <string name="hint_alignment_the_bottom_of_mouth">对准下方扫码口</string>
    <string name="hint_pay_success">支付宝付款成功</string>
    <string name="hint_order_total_price">订单金额</string>
    <string name="hint_merchant_discounts">商家优惠</string>
    <string name="hint_alipay_discounts">支付宝优惠</string>
    <string name="hint_get_receipt">请领取小票 , 期待下次光临 !
    </string>
    <string name="hint_pay_fail">支付失败</string>
    <string name="err">错误</string>
    <string name="hint_return_home">返回首页</string>
    <string name="hint_continue_pay">继续支付</string>
    <string name="hint_phone_number_empty_err">手机号不能为空！</string>
    <string name="hint_phone_number_format_err">手机号格式有误 , 请重新输入!</string>
</resources>
