<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:background="@color/bg_title_bar">
        <LinearLayout
            android:layout_marginRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="返回"
                android:textSize="17sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/title_day_end"
                android:textSize="17sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sure"
                android:textSize="17sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <Button
        android:id="@+id/btn_day_end"
        android:layout_marginTop="41dp"
        android:layout_width="106dp"
        android:layout_height="39dp"
        android:background="@drawable/shape_bg_btn_day_end"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_day_end"
        android:textSize="15sp"
        android:textColor="@color/bg_title_bar"/>
    <TextView
        android:layout_marginTop="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/day_end_explain"
        android:textSize="13sp"/>
</LinearLayout>