<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/layout_title_pay_result"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/ll_pay_success"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_flag_pay_success"/>
                <LinearLayout
                    android:layout_marginLeft="6dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_pay_success"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_account"
                        android:visibility="gone"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="支付宝账号184****0561"
                        android:textSize="10sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="90dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_total_price1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:textColor="@color/tomato"
                        android:textStyle="bold"
                        android:text="￥0.01"/>
                    <TextView
                        android:id="@+id/tv_count"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="共1件商品"
                        android:textSize="10sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="37dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_order_total_price"
                    android:textSize="11sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="0dp"/>
                <TextView
                    android:id="@+id/tv_total_price2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="￥0.01"
                    android:textSize="11sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_merchant_discounts"
                    android:textSize="11sp"
                    android:textColor="@color/red"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="0dp"/>
                <TextView
                    android:id="@+id/tv_merchant_discounts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="￥0.01"
                    android:textSize="11sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_alipay_discounts"
                    android:textSize="11sp"
                    android:textColor="@color/red"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="0dp"/>
                <TextView
                    android:id="@+id/tv_alipay_discounts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="￥0.01"
                    android:textSize="11sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="23dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_get_receipt"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btn_return_home1"
                android:layout_marginTop="135dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="180dp"
                android:layout_height="37dp"
                android:text="返回首页(10s)"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/shape_bg_btn_return_home"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_pay_fail"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="52dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_flag_pay_fail"/>
                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_pay_fail"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_marginLeft="110dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_total_price_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="￥0.01"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_count1"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="共1件商品"
                        android:textSize="10sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_marginTop="103dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/err"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_marginTop="198dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_return_home2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_return_home"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:background="@drawable/shape_bg_btn_return_home"/>
                <Button
                    android:id="@+id/btn_continue_pay"
                    android:layout_marginLeft="22dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_continue_pay"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:background="@drawable/shape_bg_btn_return_home"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>